Fixed layout bug

--- a/David Emmanuel/react-projects/src/App.css
+++ b/David Emmanuel/react-projects/src/App.css
@@ -4,6 +4,11 @@
 
 .app {
   display: flex;
+  height: 100vh;
+}
+
+main {
+  overflow-y: auto;
 }
 
 .app h1 {
