--- a/David Emmanuel/react-projects/src/Menu/Menu.css
+++ b/David Emmanuel/react-projects/src/Menu/Menu.css
@@ -1,6 +1,5 @@
 .menu {
     width: 400px;
-    height: 100vh;
     overflow-y: auto;
     padding: 0 0.5rem;
 }
